<resources>
    <string name="app_name">ABND Quiz App</string>
    <string name="title_instructions">Instructions</string>
    <string name="directions">Directions</string>
    <string name="q1_question">1. Which of these images displays a wireframe?</string>
    <string name="q2_question">2. Which of these 2 answers are primitive data types?</string>
    <string name="q2_answer_a">Boolean</string>
    <string name="q2_answer_b">Integer</string>
    <string name="q2_answer_c">Method</string>
    <string name="q2_answer_d">Class</string>
    <string name="q3_question">3. Fill in the blank.\nIDE stands for integrated _____ environment</string>
    <string name="input_hint">Your answer</string>
    <string name="q4_question">4. In XML, what does the padding property do?</string>
    <string name="q4_answer_a">A. Adjust the space OUTSIDE of the border</string>
    <string name="q4_answer_b">B. Adjust the space INSIDE of the border</string>
    <string name="q5_question">5. Write this line of code more efficiently: \nx + 2 = x;</string>
    <string name="button_getgrade">Get Grade</string>
    <string name="title_quiz">Introduction to Android Development: Exam</string>
    <string name="directions_text">When finished with exam, press the submit button to view your grade.</string>
    <string name="button_reset">Reset</string>
    <string name="toast_preamble">Your score:</string>
</resources>
